// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match first snepshot: first 1`] = `
<button
  className="
        button 
         
        button--primary 
        button--big 
      "
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  Button
</button>
`;

exports[`Button should match second snepshot: second 1`] = `
<button
  className="
        button 
         
        button--secondary 
        button--small 
      "
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="submit"
>
  Button
</button>
`;
